[package]
edition = "2021"
name = "unistone"
version = "0.1.0"

[dependencies]
bevy_config_cam = "0.3.0"
bevy-hikari = "0.1.11"
bevy_mod_picking = "0.7.0"
rand = "0.8.4"
strum = "0.24.0"
strum_macros = "0.24.0"
lazy_static = "1.4.0"

[dependencies.bevy]
version = "0.7"
features = ["bevy_render","bevy_pbr"]

[dev-dependencies.bevy]
version = "0.7"
features = ["bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "x11", "wayland"]
default-features = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3